# desafio-csv

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
features/vendas_cli/: __init__.py  __main__.py
features/vendas_cli/cli/: __init__.py  __main__.py  cli.py
features/vendas_cli/core/: __init__.py  aggregator.py  core.py  models.py
features/vendas_cli/output/: __init__.py  json_renderer.py  output.py  text.py
features/vendas_cli/parser/: __init__.py  models.py  parser.py  reader.py  validators.py
tests/: conftest.py  test_cli.py  test_core.py  test_output.py  test_parser.py
